--- a/moviehunter/index.html
+++ b/moviehunter/index.html
@@ -12,15 +12,8 @@
 <!-- START PAGE SOURCE -->
 <div id="shell">
   <div id="header">
+  <div class="subheader1">
     <h1 id="logo"><a href="#">MovieHunter<img src="css/images/logo.png" alt="" /></a></h1>
-    <div class="social"> <span>FOLLOW US ON:</span>
-      <ul>
-        <li><a class="twitter" href="#">twitter</a></li>
-        <li><a class="facebook" href="#">facebook</a></li>
-        <li><a class="vimeo" href="#">vimeo</a></li>
-        <li><a class="rss" href="#">rss</a></li>
-      </ul>
-    </div>
     <div id="navigation">
       <ul>
         <li><a class="active" href="#">HOME</a></li>
@@ -31,6 +24,7 @@
         <li><a href="#">ADVERTISE</a></li>
       </ul>
     </div>
+  </div>
     <div id="sub-navigation">
       <ul>
         <li><a href="#">SHOW ALL</a></li>
@@ -47,13 +41,26 @@
       </div>
     </div>
   </div>
+  <div class="slide-container">
+    <div class="movie-details-c">
+    <h2 class="movie-head-s">THE BATMAN</h2>
+    <h2 class="movie-rating-s">4.7(imdb) <p>1hrs:45mins</p></h2>
+    <p class="movie-description-s">When a sadistic serial killer begins murdering key political figures in Gotham, Batman is forced <br>to investigate the city's hidden corruption
+       and question his family's involvement.</p>
+    <h2 class="sgt-s"><span>Starring:</span>Robert pattison</h2>
+    <h2 class="sgt-s"><span>Genres:</span>Action</h2>
+    <h2 class="sgt-s"><span>Tag:</span>Action,Adventure,Horrer</h2>
+  </div>
+    <img src="./css/images/batman.jpg"/>
+  </div>
   <div id="main">
     <div id="content">
       <div class="box">
         <div class="head">
           <h2>LATEST TRAILERS</h2>
-          <p class="text-right"><a href="#">See all</a></p>
+          <p class="text-right"><a href="#">View all</a></p>
         </div>
+        <div class="moviecontainer">
         <div class="movie">
           <div class="movie-image"> <span class="play"><span class="name">THE BATMAN</span></span> <a href="#"><img src="css/images/movie1.jpg" alt="" /></a> </div>
           <div class="rating">
@@ -108,13 +115,15 @@
             </div>
             <span class="comments">12</span> </div>
         </div>
+      </div>
         <div class="cl">&nbsp;</div>
       </div>
       <div class="box">
         <div class="head">
           <h2>TOP RATED</h2>
-          <p class="text-right"><a href="#">See all</a></p>
+          <p class="text-right"><a href="#">View all</a></p>
         </div>
+        <div class="moviecontainer">
         <div class="movie">
           <div class="movie-image"> <span class="play"><span class="name">OK KANMANI</span></span> <a href="#"><img src="css/images/movie7.jpg" alt="" /></a> </div>
           <div class="rating">
@@ -169,13 +178,15 @@
             </div>
             <span class="comments">12</span> </div>
         </div>
+      </div>
         <div class="cl">&nbsp;</div>
       </div>
       <div class="box">
         <div class="head">
           <h2>MOST COMMENTED</h2>
-          <p class="text-right"><a href="#">See all</a></p>
+          <p class="text-right"><a href="#">View all</a></p>
         </div>
+        <div class="moviecontainer">
         <div class="movie">
           <div class="movie-image"> <span class="play"><span class="name">PARAVA</span></span> <a href="#"><img src="css/images/movie13.jpg" alt="" /></a> </div>
           <div class="rating">
@@ -230,6 +241,7 @@
             </div>
             <span class="comments">12</span> </div>
         </div>
+      </div>
         <div class="cl">&nbsp;</div>
       </div>
     </div>
