--- a/moviehunter/index.html
+++ b/moviehunter/index.html
@@ -20,18 +20,18 @@
         <li><a href="#">NEWS</a></li>
         <li><a href="#">IN THEATERS</a></li>
         <li><a href="#">COMING SOON</a></li>
-        <li><a href="#">CONTACT</a></li>
-        <li><a href="#">ADVERTISE</a></li>
       </ul>
+    </div>
+    <div class="userandsearch">
+       <a class="searchbtn">
+         <img src="./css/images/search.png"/>
+       </a>
+       <a class="userprofile">
+        <img src="./css/images/userlogo.jpg"/>
+       </a>
     </div>
   </div>
     <div id="sub-navigation">
-      <ul>
-        <li><a href="#">SHOW ALL</a></li>
-        <li><a href="#">LATEST TRAILERS</a></li>
-        <li><a href="#">TOP RATED</a></li>
-        <li><a href="#">MOST COMMENTED</a></li>
-      </ul>
       <div id="search">
         <form action="#" method="get" accept-charset="utf-8">
           <label for="search-field">SEARCH</label>
@@ -51,7 +51,7 @@
     <h2 class="sgt-s"><span>Genres:</span>Action</h2>
     <h2 class="sgt-s"><span>Tag:</span>Action,Adventure,Horrer</h2>
   </div>
-    <img src="./css/images/batman.jpg"/>
+    <img src="./css/images/batman2.jpg"/>
   </div>
   <div id="main">
     <div id="content">
@@ -247,11 +247,7 @@
     </div>
     <div class="cl">&nbsp;</div>
   </div>
-  <div id="footer">
-    <p class="lf">Copyright &copy; 2010 <a href="#">SiteName</a> - All Rights Reserved</p>
-    <p class="rf">Design by <a href="http://chocotemplates.com/">ChocoTemplates.com</a></p>
-    <div style="clear:both;"></div>
-  </div>
+  
 </div>
 <!-- END PAGE SOURCE -->
 </body>
