--- a/moviehunter/login.html
+++ b/moviehunter/login.html
@@ -31,7 +31,7 @@
             
             <div class="signup">
                 <p>New to Movieflix ?</p>
-                <a href="#">Sign up now</a>
+                <a href="signup.html">Sign up now</a>
             </div>
 
         </div>
