--- a/moviehunter/signup.html
+++ b/moviehunter/signup.html
@@ -68,8 +68,8 @@
                             <input type="submit" value="Register">
                         </div>
                         <div class="signup">
-                            <p>New to Movieflix ?</p>
-                            <a href="#">Sign up now</a>
+                            <p>Already have an account?</p>
+                            <a href="login.html">Sign in</a>
                         </div>
                     </form>
                 </div>
