improved slider design

--- a/moviehunter/index.html
+++ b/moviehunter/index.html
@@ -48,13 +48,16 @@
     <div class="movie-details-c">
     <h2 class="movie-head-s">THE BATMAN</h2>
     <h2 class="movie-rating-s">4.7(imdb) <p>1hrs:45mins</p></h2>
-    <p class="movie-description-s">When a sadistic serial killer begins murdering key political figures in Gotham, Batman is forced <br>to investigate the city's hidden corruption
+    <p class="movie-description-s">When a sadistic serial killer begins murdering key political figures<br>
+       in Gotham, Batman is forced to investigate the city's hidden corruption<br>
        and question his family's involvement.</p>
     <h2 class="sgt-s"><span>Starring:</span>Robert pattison</h2>
     <h2 class="sgt-s"><span>Genres:</span>Action</h2>
     <h2 class="sgt-s"><span>Tag:</span>Action,Adventure,Horrer</h2>
+    <a ><button class="p-btn-s">PLAY NOW</button></a>
   </div>
-    <img src="./css/images/batman2.jpg"/>
+    <img src="./css/images/batman.jpg"/>
+    <div class="shade"></div>
   </div>
   <div id="main">
     <div id="content">
