--- a/moviehunter/index.html
+++ b/moviehunter/index.html
@@ -64,7 +64,7 @@
         <h2 class="sgt-s"><span>Tag:</span>Action,Adventure,Horrer</h2>
         <a><button class="p-btn-s">PLAY NOW</button></a>
       </div>
-      <img src="./css/images/batman.jpg" />
+      <img src="./css/images/batmanhori.jpg" />
       <div class="shade"></div>
     </div>
     <div id="main">
@@ -80,34 +80,69 @@
 
               <div class="swiper-wrapper">
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">THE BATMAN</span></span> <a
-                      href="#"><img src="css/images/movie1.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">The Batman</span>
+                      <div class="time">2hr : 56mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/batmanhori.jpg" alt="" /></a>
+                  </div>
                 </div>
-                <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">MANICHITHRATHAZHU</span></span> <a
-                      href="#"><img src="css/images/movie2.jpg" alt="" /></a> </div>
 
-                </div>
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">100 DAYS OF LOVE</span></span> <a
-                      href="#"><img src="css/images/movie3.jpg" alt="" /></a> </div>
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Manichithrathazu</span>
+                      <div class="time">2hr : 49mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/movie2b.jpg" alt="" /></a>
+                  </div>
+                </div>
 
-                </div>
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">ATTACK ON TITAN</span></span> <a
-                      href="#"><img src="css/images/movie4.jpg" alt="" /></a> </div>
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">100 Days of Love</span>
+                      <div class="time">2hr : 33mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/100daysoflove1.jpg" alt="" /></a>
+                  </div>
+                </div>
 
-                </div>
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">THATTATIN MARAYATHU</span></span> <a
-                      href="#"><img src="css/images/movie5.jpg" alt="" /></a> </div>
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Attack on Titan</span>
+                      <div class="time">4 Seasons</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/aot.jpg" alt="" /></a>
+                  </div>
+                </div>
+
+                <div class="movie swiper-slide">
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Bheeshma Parvam</span>
+                      <div class="time">2hr : 24mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/bheeshma.jpg" alt="" /></a>
+                  </div>
 
                 </div>
                 <div class="movie last swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">MAYANADHI</span></span> <a
-                      href="#"><img src="css/images/movie6.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Mayanadhi</span>
+                      <div class="time">2hr : 16mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/mayanadhi1.jpg" alt="" /></a>
+                  </div>
                 </div>
               </div>
 
@@ -125,35 +160,71 @@
             <div class="swiper-button-prev p2"></div>
             <div class="moviecontainer mc2">
               <div class="swiper-wrapper">
-                <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">OK KANMANI</span></span> <a
-                      href="#"><img src="css/images/movie7.jpg" alt="" /></a> </div>
 
-                </div>
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">TRANCE</span></span> <a href="#"><img
-                        src="css/images/movie8.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">OK Kanmani</span>
+                      <div class="time">2hr : 56mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/ok-kanmani.jpg" alt="" /></a>
+                  </div>
                 </div>
+
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">KALKI</span></span> <a href="#"><img
-                        src="css/images/movie9.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Trance</span>
+                      <div class="time">2hr : 35mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/trance.jpg" alt="" /></a>
+                  </div>
                 </div>
+
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">EOIBINTE PUSHTHAKAM</span></span> <a
-                      href="#"><img src="css/images/movie10.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">KGF2</span>
+                      <div class="time">2hr : 48mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/kgf.jpg" alt="" /></a>
+                  </div>
                 </div>
+
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">2018</span></span> <a href="#"><img
-                        src="css/images/movie11.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Iyobinte Pusthakam</span>
+                      <div class="time">2hr : 38mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/iyobintepushtakam.jpg" alt="" /></a>
+                  </div>
                 </div>
+
+                <div class="movie swiper-slide">
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">2018</span>
+                      <div class="time">2hr : 15mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="./css/images/2018.jpg" alt="" /></a>
+                  </div>
+                </div>
+
                 <div class="movie last swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">NEELAKASHAM PACHAKADAL CHUVANNA
-                        BHOOMI</span></span> <a href="#"><img src="css/images/movie12.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Neelakasham Pachakadal Chuvanna Bhoomi</span>
+                      <div class="time">2hr : 23mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="./css/images/npcb.jpeg" alt="" /></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -161,6 +232,7 @@
           </div>
           <div class="cl">&nbsp;</div>
         </div>
+
         <div class="box">
           <div class="head">
             <h2>MOST COMMENTED</h2>
@@ -170,36 +242,73 @@
             <div class="swiper-button-prev p3"></div>
             <div class="moviecontainer mc3">
               <div class="swiper-wrapper">
-                <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">PARAVA</span></span> <a href="#"><img
-                        src="css/images/movie13.jpg" alt="" /></a> </div>
 
-                </div>
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">HOME</span></span> <a href="#"><img
-                        src="css/images/movie14.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Spider-Man:Across the Spider-Verse</span>
+                      <div class="time">2hr : 16mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="./css/images/spiderman.jpg" alt="" /></a>
+                  </div>
                 </div>
+
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">AMEN</span></span> <a href="#"><img
-                        src="css/images/movie15.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Ranam</span>
+                      <div class="time">2hr : 16mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/ranam.jpg" alt="" /></a>
+                  </div>
                 </div>
+
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">KUMBALANGI NIGHTS</span></span> <a
-                      href="#"><img src="css/images/movie16.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Avatar:The Way of Water</span>
+                      <div class="time">3hr : 12mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="./css/images/avatar2.jpg" alt="" /></a>
+                  </div>
                 </div>
+
                 <div class="movie swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">THALLUMALA</span></span> <a
-                      href="#"><img src="css/images/movie17.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Kumblangi Nights</span>
+                      <div class="time">2hr : 15mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="css/images/movie16.jpg" alt="" /></a>
+                  </div>
                 </div>
+
+                <div class="movie swiper-slide">
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">Thallumaala</span>
+                      <div class="time">2hr : 27mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="./css/images/thallumala.jpg" alt="" /></a>
+                  </div>
+                </div>
+
                 <div class="movie last swiper-slide">
-                  <div class="movie-image"> <span class="play"><span class="name">FIGHT CLUB</span></span> <a
-                      href="#"><img src="css/images/movie18.jpg" alt="" /></a> </div>
-
+                  <div class="movie-image">
+                    <span class="play">
+                      <span class="name">FIGHT CLUB</span>
+                      <div class="time">2hr : 19mins</div>
+                      <a><button class="p-btn-card">PLAY NOW</button></a>
+                    </span>
+                    <a href="#"><img src="./css/images/fightclub.jpg" alt="" /></a>
+                  </div>
                 </div>
+
               </div>
             </div>
             <div class="swiper-button-next n3"></div>
